fix(plugins/plugin-client-common): in splits, spinner is not centered
Fixes #7129

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
@@ -14,21 +14,8 @@
  * limitations under the License.
  */
 
-@import '_mixins';
-@import '../Sidecar/_mixins';
-
-/** Inset of the <input> element w.r.t. the bordered/backgrounded region */
-$inset: 0.375em;
-
-/** Font size of e.g. timestamp */
-$right-element-font-size-factor: 0.75;
-$right-element-font-size: $right-element-font-size-factor + rem;
-
-/** Padding for action buttons */
-$action-padding: 3px;
-
-/** Color to indicate focused block */
-$focus-color: var(--color-brand-01);
+@import 'mixins';
+@import '../Sidecar/mixins';
 
 .repl-input,
 .repl-input-sourceref,
